<resources>
    <string name="app_name"> UEN SMK HH - Urdu </string>
    <string name="btnSync">Download Data</string>
    <string name="btnUpload">Upload Data</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions." </string>
    <string name="tdheading"> SECTION D: HOUSEHOLD MEMBER’S INFORMATION </string>
    <string name="teheading"> SECTION E: REPRODUCTIVE HEALTH (Complete this table for all married women aged 15 &#8211; 49 years in the household) </string>
    <string name="te2heading"> MATERNAL MORTALITY STATUS </string>
    <string name="tfheading"> SECTION F: ANTENATAL CARE </string>
    <string name="tiheading"> SECTION I: CHILD HEALTH </string>
    <string name="ti2heading"> SECTION I2: ACUTE RESPIRATORY INFECTION (ARI) </string>
    <string name="tjheading"> SECTION J: IMMUNIZATION </string>
    <string name="tkheading"> SECTION K: FAMILY PLANNING </string>
    <string name="tlheading"> SECTION L: WOMEN EMPOWERMENT </string>
    <string name="tmheading"> SECTION M: SOCIOL ECONOMIC STATUS OF HOUSEHOLD </string>
    <string name="tnheading"> SECTION N: WATER AND SANITATION </string>
    <string name="toheading"> SECTION O: HANDWASHING </string>
    <string name="ah0title"> SECTION AH: ADOLESCENT HEALTH</string>
    <string name="unttitle">UNMET NEED</string>
    <string name="splashText">Supporting Women and Girls in Pakistan Scaling Up\n
    Empowerment and Care  Strategies  to Address Health and Survival\n
    Centre of Excellence Women &amp; Child Health\n
    Aga Khan University, Karachi, Pakistan</string>
    <string name="title_activity_family_members_list"> Family Members List </string>
    <string name="sM"> یو سی </string>
    <string name="yes"> ہاں </string>
    <string name="no"> نہیں </string>
    <string name="dkn"> معلوم نہیں </string>
    <string name="none"> کوئی نہیں </string>
    <string name="never"> کبھی نہیں </string>
    <string name="na"> قابل اطلاق / دستیاب نہیں  </string>
    <string name="nap"> قابل اطلاق نہیں </string>
    <string name="nav"> دستیاب نہیں </string>
    <string name="ref"> انکار کر دیا </string>
    <string name="other"> دیگر </string>
    <string name="specify"> وضاحت کریں </string>
    <string name="year"> سال </string>
    <string name="month"> مہینہ </string>
    <string name="weeks"> ہفتے </string>
    <string name="days"> دن </string>
    <string name="hours"> گھنٹے </string>
    <string name="minutes"> منٹ </string>
    <string name="kg"> کلوگرام </string>
    <string name="km"> کلومیٹر </string>
    <string name="cm"> سینٹی میٹر </string>
    <string name="in"> انچ </string>
    <string name="rupees"> روپے </string>
    <string name="num"> اعداد </string>
    <string name="name"> نام </string>
    <string name="age"> عمر </string>
    <string name="total"> Total </string>
    <string name="mwra"> MWRA </string>
    <string name="under2">Child Under 5</string>
    <string name="taheading"> SECTION A: HH Identification </string>
    <string name="a101"> کلسٹر نمبر </string>
    <string name="a101a"> یہ معلومات ضلعی بنیاد پر بنائی گئی گاؤں کی فہرست پر مبنی ہوں گی۔ ہر انٹرویو کرنے والے کو جس علاقے کا وہ دورہ کرے گا کلسٹرز کی ایک فہرست دی جائے گی اور انٹرویو شروع کرنے سے پہلے اسی فہرست سے یہ معلومات درج کی جائیں گی۔ </string>
    <string name="a102"> کلسٹر کی قسم </string>
    <string name="a102a"> جن کلسٹرز میں ایل ایچ ڈبلیو دورہ کرتی ہے </string>
    <string name="a102b"> جن کلسٹرز میں ایل ایچ ڈبلیو دورہ نہیں کرتی </string>
    <string name="a103"> فارم سیریل نمبر: </string>
    <string name="a104">" صوبہ: "</string>
    <string name="a104a"> بلوچستان </string>
    <string name="a104b"> پنجاب </string>
    <string name="a104c"> سندھ </string>
    <string name="a105">" ضلع: "</string>
    <string name="a105a"> جعفرآباد </string>
    <string name="a105a_title"> بلوچستان </string>
    <string name="a105b"> نصیرآباد </string>
    <string name="a105c"> لسبیلہ </string>
    <string name="a105d"> مظفر گڑھ </string>
    <string name="a105d_title"> پنجاب </string>
    <string name="a105e"> رحیم یار خان </string>
    <string name="a105f"> بدین </string>
    <string name="a105f_title"> سندھ </string>
    <string name="a105g"> سانگھڑ </string>
    <string name="a105h"> قمبر شہداد کوٹ </string>
    <string name="a106">" تحصیل: "</string>
    <string name="a107">" یوسی: "</string>
    <string name="a108"> جگہ / تحقیق: </string>
    <string name="a108a"> شہری </string>
    <string name="a108b"> دیہی </string>
    <string name="a109"> گاؤں کا نام: </string>
    <string name="a110"> بلاک / محلہ </string>
    <string name="a111">" گلی: "</string>
    <string name="a112"> گھر / خاندان نمبر </string>
    <string name="a112a"> دستیاب نہیں </string>
    <string name="checkHHpresent"> گھر کے سربراہ کا نام لائن لسٹنگ ڈیٹا سے مطابقت رکھتا ہے۔ </string>
    <string name="newHHheadname"> نیا سربراہ کا نام </string>
    <string name="b101"> Latitude (Example: 24.861462) </string>
    <string name="b102"> Longitude (Example:67.009939) </string>
    <string name="c101"> C101:\t کیارضامندی حاصل کی گئی تھی؟ </string>
    <string name="c101a"> زبانی اجازت نامہ </string>
    <string name="c101aa"> جی ہاں </string>
    <string name="c101ab"> نہیں </string>
    <string name="c101b"> C101b:\t تحریری اجازت نامہ </string>
    <string name="c101ba"> جی ہاں </string>
    <string name="c101bb"> نہیں </string>
    <string name="d101"> D101:\t گھر کے فرد کا سیریل نمبر ؟ </string>
    <string name="d101name"> نام اور سیریل نمبر: </string>
    <string name="d102"> D102:\t گھر کے فرد کا نام کیا ہے ؟ </string>
    <string name="d102a"> برا ئے مہربانی پہلے مجھے ان تمام افراد کا نام بتائیں جو عام طور پر یہاں رہتے ہیں، خاندان کے سربراہ سے شروع کریں </string>
    <string name="d103"> D103:\t گھر کے سربراہ سے رشتہ ؟ </string>
    <string name="d103hint"> (نام) کا گھر کے سربراہ سے کیا تعلق ہے ؟ </string>
    <string name="d103a"> گھر کا سربراہ </string>
    <string name="d103b"> بیوی / شوہر </string>
    <string name="d103c"> بیٹا / بیٹی </string>
    <string name="d103d"> داماد / بہو </string>
    <string name="d103e"> پوتا، پوتی / نواسا، نواسی </string>
    <string name="d103f"> والدین </string>
    <string name="d103g"> ساس / سُسر </string>
    <string name="d103h"> بھائی /  بہن </string>
    <string name="d103i"> دیور، دیورانی / بھابھی، بہنوئی / سالا، سالی </string>
    <string name="d103j"> بھتیجا، بھتیجی / بھانجا، بھانجی </string>
    <string name="d103k"> دادا، دادی / نانا، نانی </string>
    <string name="d103l"> پھُوپو، پھُوپا / خالو، خاله / چچا، چچی / ماموں، ممانی </string>
    <string name="d103m"> سوتیلے / رضاعی / لے پالک بچے </string>
    <string name="d103n"> گحریلو ملازم </string>
    <string name="d103o"> معلوم نہیں </string>
    <string name="d104"> D104:\t گھر کے فرد کی صنف کیا ہے ؟ </string>
    <string name="d104a"> لڑکا </string>
    <string name="d104b"> لڑکی </string>
    <string name="d105"> D105:\t گھر کے فرد کی ازدواجی حیثیت کیا ہے ؟ </string>
    <string name="d105a"> شادی شدہ </string>
    <string name="d105b"> غیر شادی شدہ </string>
    <string name="d105c"> بیوہ / رنڈوہ </string>
    <string name="d105d"> طلاق یافتہ / الگ رہتا / رہتی ہوں </string>
    <string name="d106"> D106:\t  اگر ممبر کی فہرست میں باپ سے رشتہ نہیں بتایا گیا تو ‘NA’ لکھیں ۔ </string>
    <string name="d106a"> باپ کا سیریل نمبر </string>
    <string name="d106b"> NA </string>
    <string name="d107"> D107:\t اگر ممبر کی فہرست میں ماں سے رشتہ نہیں بتایا گیا ‘NA’ تو لکھیں ۔ </string>
    <string name="d107a"> ماں کا سیریل نمبر </string>
    <string name="d107b"> NA </string>
    <string name="d108"> D108:\t تاریخ پیدائش : اگر تاریخ پیدائش معلوم نہیں تو ‘00’ ریکارڈ کریں اور عمر درج کریں </string>
    <string name="d108a"> تاریخ </string>
    <string name="d108b"> مہینہ </string>
    <string name="d108c"> سال </string>
    <string name="d109"> D109:\t گھر کے فرد کی عمر کیا ہے ؟ </string>
    <string name="d109hint"> اگر تاریخ پیدائش ریکارڈ کی گئی تھی تو عمر میں خودبخود نمودار D.O.B اور D.O.I ہو جائیگی 5 سال سے کم عمر بچے کے لئے یہ سوال نہیں کھلے کوڈ ظاہر ‘NA’ گا اور خود کار نظام کے تحت ہو جائیگا </string>
    <string name="d109a"> عمر </string>
    <string name="d109b"> مہینہ </string>
    <string name="d109c"> سال </string>
    <string name="d110"> D110:\t تعلیم: (نام) کی مکمل تعلیم کتنی ہے ۔ </string>
    <string name="d110a"> کوئی نہیں </string>
    <string name="d110b"> پرائمری سے پہلے </string>
    <string name="d110c"> پرائمری (1 سے 5) </string>
    <string name="d110d"> مڈل (6 سے 8) </string>
    <string name="d110e"> سیکنڈری (9 سے 10) </string>
    <string name="d110f"> انٹرمیڈیٹ </string>
    <string name="d110g"> گریجویشن </string>
    <string name="d110h"> ماسٹرز </string>
    <string name="d110i"> پی ایچ ڈی </string>
    <string name="d110j"> ڈپلوما (آئی ٹی / الیکٹریکل، مکینیکل، سول) </string>
    <string name="d110k"> مزہبی تعلیم (حافظ/عالم/ عالمہ) </string>
    <string name="d110l"> معلوم نہیں </string>
    <string name="d110m"> لاگو نہیں ہوتا </string>
    <string name="d111"> D111\t پیشہ: (نام) کا پیشہ کیا ہے۔ </string>
    <string name="d111x"> 2 سال سے کم عمر بچے کے لئے یہ سوال نہیں کھلے گا اور خودکار نظام کے تحت ‘NA’ کوڈ ظاہر ہو جائیگا۔ </string>
    <string name="un01">UN01:\t کیا آپ حمل سے ہونا چاہتی تھی؟ ہیں؟</string>
    <string name="un01a">ہاں</string>
    <string name="un01b">نہیں</string>
    <string name="un02">UN02:\t کیا آپ بعد میں بچہ چاہتی تھی یا بلکل ہی بچہ نہیں چاہتی تھی؟</string>
    <string name="un02a">بعد میں</string>
    <string name="un02b">بلکل نہیں چاہتی</string>
    <string name="un03">UN03:\t میں اب مستقبل کے بارے میں آپ سے پوچھوں گی کیا آپ اور بچے چاہتی ہیں یا آپ اور  بچے نہیں چاہتیں۔</string>
    <string name="un03a">اور بچہ چاہتی ہوں</string>
    <string name="un03b">اور نہیں</string>
    <string name="un03c">میں دوبارہ حمل سے نہیں ہو سکتی</string>
    <string name="un03d">ابھی فیصلہ نہیں کیا / معلوم نہیں</string>
    <string name="un04">UN04:\t اگلے بچے کی پیدائش  کے لئے آپ کتنا وقفہ دیں گی؟</string>
    <string name="un04a">مہینہ</string>
    <string name="un04b">سال</string>
    <string name="un04c">فوراً وقفہ نہیں</string>
    <string name="un04d">دوبارہ حمل سے نہیں ہوسکتی</string>
    <string name="un05">UN05:\t کیا آپ اس وقت حمل کے لئے جسمانی طور پہ تیار ہیں؟</string>
    <string name="un05a">ہاں</string>
    <string name="un05b">نہیں</string>
    <string name="un05c">معلوم نہیں</string>
    <string name="un06">UN06:\t آپ کو کیوں لگتا ہے کہ آپ جسمانی طور پہ تیار / اس قابل نہیں؟</string>
    <string name="un06a">کبھی کبھار یا  رجوع نہ کرنا</string>
    <string name="un06b">اختتام حیض</string>
    <string name="un06c">کبھی حیض نہیں ہوئے</string>
    <string name="un06d">رحم براری (رحم کو آپریشن کر کے نکالنا)</string>
    <string name="un06e">دو سال سے زیادہ حاملہ ہونے کی  بے نتیجہ کوشش کر رہے ہیں</string>
    <string name="un06f">وفع حمل کے بعد حیض کی نکاسی نہ ہونا</string>
    <string name="un06g">ماں کا دودھ پلانا</string>
    <string name="un06h">عمر زیادہ ہے</string>
    <string name="un06x">دیگر</string>
    <string name="un07">UN07:\t آخر بار ماہواری/ حیض کب ہوئے؟</string>
    <string name="un07a">دن پہلے</string>
    <string name="un07b">ہفتے پہلے</string>
    <string name="un07c">مہینے پہلے</string>
    <string name="un07d">سال مہینے</string>
    <string name="un07e">آخری پیدائش سے پہلے ہوئے تھے</string>
    <string name="end_interview"> ختم </string>
    <string name="nextSection"> اگلا </string>
</resources>