<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="callback"
            type="edu.aku.hassannaqvi.uen_smk_hh.ui.sections.SectionUNActivity" />
    </data>

    <ScrollView
        style="@style/i_scrollview"
        android:layoutDirection="rtl"
        android:textDirection="rtl">

        <LinearLayout
            android:id="@+id/fldGrpSectionUN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <!-- un01  Radio   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVun01"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/i_textview"
                        android:text="@string/un01" />

                    <RadioGroup
                        android:id="@+id/un01"
                        style="@style/radiogroup"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/un01a"
                            style="@style/radiobutton"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/un01a" />

                        <RadioButton
                            android:id="@+id/un01b"
                            style="@style/radiobutton"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/un01b" />

                    </RadioGroup>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- un02  Radio   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVun02"
                style="@style/cardView"
                android:visibility='@{un01a.checked? View.GONE : View.VISIBLE}'>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/i_textview"
                        android:text="@string/un02" />

                    <RadioGroup
                        android:id="@+id/un02"
                        style="@style/radiogroup"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/un02a"
                            style="@style/radiobutton"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/un02a" />

                        <RadioButton
                            android:id="@+id/un02b"
                            style="@style/radiobutton"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/un02b" />

                    </RadioGroup>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- un03  Radio   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVun03"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/i_textview"
                        android:text="@string/un03" />

                    <RadioGroup
                        android:id="@+id/un03"
                        style="@style/radiogroup">

                        <RadioButton
                            android:id="@+id/un03a"
                            style="@style/radiobutton"
                            android:text="@string/un03a" />

                        <RadioButton
                            android:id="@+id/un03b"
                            style="@style/radiobutton"
                            android:text="@string/un03b" />

                        <RadioButton
                            android:id="@+id/un03c"
                            style="@style/radiobutton"
                            android:text="@string/un03c" />

                        <RadioButton
                            android:id="@+id/un03d"
                            style="@style/radiobutton"
                            android:text="@string/un03d" />

                    </RadioGroup>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- un04  Radio   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVun04"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/i_textview"
                        android:text="@string/un04" />

                    <RadioGroup
                        android:id="@+id/un04"
                        style="@style/radiogroup">

                        <RadioButton
                            android:id="@+id/un04a"
                            style="@style/radiobutton"
                            android:text="@string/un04a" />

                        <com.edittextpicker.aliazaz.EditTextPicker
                            android:id="@+id/un04ax"
                            style="@style/EditTextNum"
                            android:hint="@string/un04a"
                            android:maxLength="2"
                            android:tag="un04a"
                            android:text='@{un04a.checked? un04ax.getText().toString() : ""}'
                            android:visibility='@{un04a.checked? View.VISIBLE : View.GONE}'
                            app:maxValue="29"
                            app:minValue="1"
                            app:type="range" />

                        <RadioButton
                            android:id="@+id/un04b"
                            style="@style/radiobutton"
                            android:text="@string/un04b" />

                        <com.edittextpicker.aliazaz.EditTextPicker
                            android:id="@+id/un04bx"
                            style="@style/EditTextNum"
                            android:hint="@string/un04b"
                            android:maxLength="2"
                            android:tag="un04b"
                            android:text='@{un04b.checked? un04bx.getText().toString() : ""}'
                            android:visibility='@{un04b.checked? View.VISIBLE : View.GONE}'
                            app:maxValue="29"
                            app:minValue="1"
                            app:type="range" />

                        <RadioButton
                            android:id="@+id/un04c"
                            style="@style/radiobutton"
                            android:text="@string/un04c" />

                        <RadioButton
                            android:id="@+id/un04d"
                            style="@style/radiobutton"
                            android:text="@string/un04d" />

                    </RadioGroup>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- un05  Radio   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVun05"
                style="@style/cardView"
                android:visibility='@{un04d.checked? View.GONE : View.VISIBLE}'>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/i_textview"
                        android:text="@string/un05" />

                    <RadioGroup
                        android:id="@+id/un05"
                        style="@style/radiogroup">

                        <RadioButton
                            android:id="@+id/un05a"
                            style="@style/radiobutton"
                            android:text="@string/un05a" />

                        <RadioButton
                            android:id="@+id/un05b"
                            style="@style/radiobutton"
                            android:text="@string/un05b" />

                        <RadioButton
                            android:id="@+id/un05c"
                            style="@style/radiobutton"
                            android:text="@string/un05c" />

                    </RadioGroup>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- un06  Radio   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVun06"
                style="@style/cardView"
                android:visibility='@{un05a.checked || un05c.checked? View.GONE : View.VISIBLE}'>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/i_textview"
                        android:text="@string/un06" />

                    <RadioGroup
                        android:id="@+id/un06"
                        style="@style/radiogroup">

                        <RadioButton
                            android:id="@+id/un06a"
                            style="@style/radiobutton"
                            android:text="@string/un06a" />

                        <RadioButton
                            android:id="@+id/un06b"
                            style="@style/radiobutton"
                            android:text="@string/un06b" />

                        <RadioButton
                            android:id="@+id/un06c"
                            style="@style/radiobutton"
                            android:text="@string/un06c" />

                        <RadioButton
                            android:id="@+id/un06d"
                            style="@style/radiobutton"
                            android:text="@string/un06d" />

                        <RadioButton
                            android:id="@+id/un06e"
                            style="@style/radiobutton"
                            android:text="@string/un06e" />

                        <RadioButton
                            android:id="@+id/un06f"
                            style="@style/radiobutton"
                            android:text="@string/un06f" />

                        <RadioButton
                            android:id="@+id/un06g"
                            style="@style/radiobutton"
                            android:text="@string/un06g" />

                        <RadioButton
                            android:id="@+id/un06h"
                            style="@style/radiobutton"
                            android:text="@string/un06h" />

                        <RadioButton
                            android:id="@+id/un0696"
                            style="@style/radiobutton"
                            android:text="@string/un06x" />

                        <EditText
                            android:id="@+id/un0696x"
                            style="@style/EditTextAlpha"
                            android:hint="@string/un06x"
                            android:tag="un0696"
                            android:text='@{un0696.checked? un0696x.getText().toString() : ""}'
                            android:visibility='@{un0696.checked? View.VISIBLE : View.GONE}' />

                    </RadioGroup>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <!-- un07  Radio   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVun07"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/i_textview"
                        android:text="@string/un07" />

                    <RadioGroup
                        android:id="@+id/un07"
                        style="@style/radiogroup">

                        <RadioButton
                            android:id="@+id/un07a"
                            style="@style/radiobutton"
                            android:text="@string/un07a" />

                        <RadioButton
                            android:id="@+id/un07b"
                            style="@style/radiobutton"
                            android:text="@string/un07b" />

                        <RadioButton
                            android:id="@+id/un07c"
                            style="@style/radiobutton"
                            android:text="@string/un07c" />

                        <RadioButton
                            android:id="@+id/un07d"
                            style="@style/radiobutton"
                            android:text="@string/un07d" />

                        <RadioButton
                            android:id="@+id/un07e"
                            style="@style/radiobutton"
                            android:text="@string/un07e" />

                    </RadioGroup>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnEnd"
                    style="@style/buttons_bottom"
                    android:background="@android:color/holo_red_light"
                    android:onClick="@{() -> callback.BtnEnd()}"
                    android:text="@string/end_interview" />

                <Button
                    android:id="@+id/btnNext"
                    style="@style/buttons_bottom"
                    android:background="@android:color/holo_green_light"
                    android:onClick="@{() -> callback.BtnContinue()}"
                    android:text="@string/nextSection" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</layout>